Bug 201242: When minimize and then restore, two carets appear in a mail compose window Patch by bryner and me r=bryner sr=jst a=sspitzer